--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "keywords": ["onphp", "tools", "utils"],
     "homepage": "https://github.com/sugrob/onphp-toolkit",
     "type": "library",
+    "version": "0.1.0",
     "license": "GPL-3.0",
     "authors" : [
       {
