--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "autoload": {
         "psr-4": {
-            "sugrob\\OnPHPToolkit\\": "src"
+            "sugrob\\OnPHP\\Toolkit\\": "src"
         }
     }
 }
